refactor: update logic improved